<resources>
    <!-- atmos_ble_hardware_manager -->
    <string name="atmos_ble_hardware_not_supported">Le Bluetooth Low Energy n\'est pas supporté sur ce terminal.</string>

    <!-- atmos_app_permissions_activity -->
    <string name="atmos_app_permissions_title">Heh ! Pas si vite...</string>
    <string name="atmos_app_permissions_main">Des autorisations sont nécessaires pour utiliser cette application.</string>
    <string name="atmos_app_permissions_explain">En effet, cette application utilise une base de données stockée dans votre stockage interne. Prêt à accorder cela ?</string>
    <string name="atmos_app_permissions_button">Absolument !</string>

    <!-- atmos_string_generics -->
    <string name="atmos_app_name">project.atmos</string>
    <string name="atmos_title_synthesis">Synthèse</string>
    <string name="atmos_title_mod_manager">Ajout - Suppr.</string>
    <string name="atmos_title_settings">Paramètres</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>

    <!-- atmos_synthesis_fragment -->

    <!-- atmos_synth_fragment_oc_menu -->
    <string name="atmos_oc_connect">Connecter</string>
    <string name="atmos_oc_disconnect">Déconnecter</string>
    <string name="atmos_oc_update">Modifier</string>
    <string name="atmos_oc_delete">Supprimer</string>
    <string name="atmos_oc_details">Informations</string>

    <!-- atmos_synth_fragment_oc_menu -->
    <string name="atmos_oc_info_name">Nom:</string>
    <string name="atmos_oc_info_last_connect">Dernière Connexion:</string>

    <!-- atmos_string_measurement_view -->
    <string name="atmos_string_device_name">BlackBird</string>
    <string name="atmos_string_device_address">FF:FF:FF:FF:FF:FF</string>
    <string name="atmos_string_device_status">Undetermined</string>
    <string name="atmos_string_device_measurement">90,3°C</string>

    <!-- atmos_string_bt_instance_view -->
    <string name="atmos_string_bt_instance_name">BlackBird</string>
    <string name="atmos_string_bt_instance_address">FF:FF:FF:FF:FF:FF</string>

    <!-- atmos_modules_manager_fragment -->
    <string name="atmos_string_mod_manager_discover">Rechercher</string>
</resources>
