<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".AppPermissionsActivity"
    android:background="@color/atmos_color_primary">
    <TextView
        android:id="@+id/atmos_config_app_string_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:text="@string/atmos_app_permissions_title"
        android:textSize="40sp"
        android:textColor="@color/atmos_color_white">

    </TextView>

    <TextView
        android:id="@+id/atmos_config_app_string_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/atmos_config_app_string_title"
        android:text="@string/atmos_app_permissions_main"
        android:textSize="20sp"
        android:textColor="@color/atmos_color_white">
    </TextView>

    <TextView
        android:id="@+id/atmos_config_app_string_explaination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/atmos_config_app_string_main"
        android:text="@string/atmos_app_permissions_explain"
        android:textSize="20sp"
        android:textColor="@color/atmos_color_white">
    </TextView>

    <Button
        android:id="@id/atmos_app_config_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atmos_app_permissions_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
