<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/measurement_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:outlineProvider="bounds"
    android:layout_margin="10dp">

    <!-- BLE Module Info (Name + ADDR) -->
    <TextView
        android:id="@id/atmos_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atmos_string_device_name"
        android:textColor="@color/atmos_color_black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:ellipsize="end"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/atmos_device_measurement"/>

    <!-- Temperature Value Display -->
    <TextView
        android:id="@id/atmos_device_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atmos_string_device_measurement"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/atmos_color_primary_dark"
        android:layout_alignParentEnd="true"/>

    <!-- BLE Module Address Display -->
    <TextView
        android:id="@id/atmos_device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atmos_string_device_address"
        android:textColor="@color/atmos_color_black"
        android:layout_below="@id/atmos_device_name"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/atmos_device_status"
        />

    <!-- BLE Module Status Display -->
    <TextView
        android:id="@id/atmos_device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atmos_string_device_status"
        android:textColor="@color/atmos_color_grey"
        android:layout_below="@id/atmos_device_name"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>